# undetected-playwright

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: cloudflare.py  quick_started.py  sannysoft.py
undetected_playwright/: __init__.py  ninja.py  tarnished.py
undetected_playwright/js/: navigator.permissions.js  navigator.plugins.js
